--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 <body>
 
   <div class="container">
-    <h1>jQuery Badges</h1>
+    <h1>Completed Courses</h1>
     <div id="badges"></div>
+	<h1>Badges Earned</h1>
+	<div id="badges2"></div>
   </div>
 
 
